tests/ui/errors/snapshots/infer_private_field_in_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Private field
   ╭─[main.lis:7:20]
 6 │   match p {
 7 │     shapes.Point { x, y } => x + y,
   ·                    ┬
   ·                    ╰── private to `shapes`
 8 │   }
   ╰────
  help: Cannot access private field `x` of struct `shapes.Point`. Mark the field as `pub` · code: [resolve.private_field_access]
