tests/ui/errors/snapshots/infer_private_field_in_struct_autofill_direct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Private field
   ╭─[main.lis:5:33]
 4 │ fn main() {
 5 │   let q = shapes.Point { y: 10, .. };
   ·                                 ─┬
   ·                                  ╰── `x` is private to `shapes`
 6 │ }
   ╰────
  help: `x` of `shapes.Point` cannot be autofilled because `x` is private to module `shapes`. Provide an explicit value, or have `shapes` expose `x` as `pub` or offer a constructor · code: [resolve.private_field_autofill]
