tests/ui/errors/snapshots/infer_private_field_in_struct_autofill_transitive.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Field has no zero value
    ╭─[main.lis:9:19]
  8 │ fn main() {
  9 │   let o = Outer { .. };
    ·                   ─┬
    ·                    ╰── no zero available
 10 │   let _ = o;
    ╰────
  help: `inner` of `Outer` cannot be autofilled because `Inner.b` is private to package `other`. Provide an explicit value for `inner`, or have `other` expose `b` as `pub` · code: [infer.field_no_zero]
