tests/ui/errors/snapshots/infer_private_field_in_struct_literal_aliased_import.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Private field
   ╭─[main.lis:5:21]
 4 │ fn main() {
 5 │   let p = s.Point { x: 1, y: 2 };
   ·                     ┬
   ·                     ╰── private to `shapes`
 6 │ }
   ╰────
  help: Cannot access private field `x` of struct `s.Point`. Mark the field as `pub` · code: [resolve.private_field_access]
