tests/ui/errors/snapshots/infer_private_field_in_struct_spread.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Private field
   ╭─[main.lis:6:35]
 5 │   let p = shapes.make_point();
 6 │   let q = shapes.Point { y: 10, ..p };
   ·                                   ┬
   ·                                   ╰── `x` is private to `shapes`
 7 │ }
   ╰────
  help: Cannot spread `shapes.Point` because field `x` is private. Mark the field as `pub` · code: [resolve.private_field_spread]
