tests/ui/errors/snapshots/infer_propagate_in_assert_condition.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `?` cannot be used inside `assert`
   ╭─[test.lis:7:10]
 6 │ fn run() -> Result<(), string> {
 7 │   assert check("x")?
   ·          ─────┬─────
   ·               ╰── `?` inside `assert`
 8 │   Ok(())
   ╰────
  help: Bind the result first: `let val = expression?; assert val` · code: [infer.propagate_in_assert]
