tests/ui/errors/snapshots/infer_propagate_in_if_condition.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `?` cannot be used inside a condition
   ╭─[test.lis:7:6]
 6 │ fn run() -> Result<(), string> {
 7 │   if check("x")? {
   ·      ─────┬─────
   ·           ╰── `?` inside condition
 8 │     let _ = 1
   ╰────
  help: Bind the result first: `let val = expression?; if val { ... }` · code: [infer.propagate_in_condition]
